Added more training data