@@ -9,7 +9,7 @@
 		<dependency>
 			<groupId>tech.viom</groupId>
 			<artifactId>nimble</artifactId>
-			<version>1.3.0-snapshot</version>
+			<version>1.4.0-snapshot</version>
 		</dependency>
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
@@ -25,22 +25,24 @@
 	<build>
 		<plugins>
 			<plugin>
-
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M7</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m --add-opens
-						java.base/java.lang=ALL-UNNAMED --add-opens
-						java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+					<argLine>
+						-Xmx1024m
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+					</argLine>
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
+					<testFailureIgnore>true</testFailureIgnore>
+					<forkedProcessExitTimeoutInSeconds>60</forkedProcessExitTimeoutInSeconds>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
